--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/great-idea.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Great Idea Webpage</h2>
+										<p>This is a webpage I worked on as I learned User Interface.</p>
+										<a href="https://github.com/3Dia/User-Interface/blob/master/great-idea-website/index.html" class="special">See Code</a>
 									</div>
 								</div>
 							</section>
@@ -80,11 +80,11 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/sprint1-img.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Sprint Challenge</h2>
+										<p>This is my first ever two page, website build utilizing skills I learned at Lambda school</p>
+										<a href="https://github.com/3Dia/Sprint-Challenge--User-Interface/blob/master/index.html" class="special">View Code</a>
 									</div>
 								</div>
 							</section>
