--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-diamond"></span></div>
+							<div class="logo"><img src="images/self-img.jpg"></span></div>
 							<h2 class="orange">Trey Gantt</h2>
 							<p class="solid-orange">Social Justice Warrior turned Full Stack Web Developer<a href="http://html5up.net"></a></p>
 						</div>
